tests/snapshots/run_wpt_conformance__trtx_reshape__squeeze__float16_4D_tensor_by_eliminating_all_dimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "reshape.https.any.js",
    "reshape (squeeze) float16 4D tensor by eliminating all dimensions",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: reshape operation missing 'newShape'\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    reshapeInput: f16[1, 1, 1, 1];\n  }\n\n  nodes {\n    [reshapeOutput] = reshape(reshapeInput, label=\"\");\n  }\n\n  outputs { reshapeOutput; }\n}\n",
        ),
    },
)
