tests/snapshots/run_wpt_conformance__trtx_reshape__squeeze__float16_5D_tensor_by_eliminating_four_dimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (squeeze) float16 5D tensor by eliminating four dimensions",
    "trtx",
    "PASS",
)
